--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@200;300;400;500;600;700;800&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --font-family: Sora, sans-serif;
+
+  --gradient-text: linear-gradient(89.97deg, #ffffff 1.84%, #f49867 102.67%);
+  --gradient-bar: linear-gradient(103.22deg, #ffffff -13.86%, #f49867 99.55%);
+  --bg-button: #fefbfb;
+
+  --color-bg: #080307;
+  --color-footer: rgb(21, 10, 13);
+  --color-text: #fefbfb;
+  --color-header: #f5f0e0;
+  --color-subtext: #ff8a71;
 }
