--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -16,6 +16,7 @@
 .unity__blog__container__article__image img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .unity__blog__container__article__content {
